# localization_SLAM

./: .gitignore  CMakeLists.txt  README.md  package.xml
Log/: back_end_node.INFO  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-223450.534430  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-231057.559091  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-232825.574059  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-233023.575628  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-233720.580576  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-235335.594038  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-235547.595818  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240920-235825.600163  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-000048.602270  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-000142.604409  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-092812.9810  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-092959.11774  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-093101.12720  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-095056.29877  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-101637.47592  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240921-101743.48573  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-175106.1120532  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-175135.1121085  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-175430.1123217  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-180346.1130939  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-180359.1132273  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-180557.1133819  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-180634.1135267  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-180927.1137310  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-181540.1143413  back_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240922-210453.1227560  front_end_node.INFO  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-124602.120072  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134236.172365  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134530.174739  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134742.178286  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134818.178876  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134856.179648  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-134938.182201  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-164712.301870  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-165212.306080  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-165225.306305  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-170210.313566  front_end_node.yuanyuan-Legion-Y9000P-IAH7H.yuanyuan.log.INFO.20240919-172032.327168  (+73 more)
cmake/: PCL.cmake
config/front_end/: config.yaml
config/viewer/: config.yaml
include/: utility.h
include/data_pretreat/: data_pretreat_flow.hpp
include/front_end/: front_end.hpp  front_end_flow.hpp
include/global_settings/: global_settings.hpp
include/publisher/: cloud_publisher.hpp  imu_publisher.hpp  key_frame_publisher.hpp  key_frames_publisher.hpp  odometry_publisher.hpp
include/save_map/: save_map.h
include/sensor_data/: GNSS_data.hpp  IMU_data.hpp  LiDAR_data.hpp  key_frame.hpp  pose_data.hpp  velocity_data.hpp
include/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  key_frame_subscriber.hpp  key_frames_subscriber.hpp  odometry_subscriber.hpp  velocity_subscriber.hpp
include/tf_listener/: tf_listener.hpp
include/tools/: file_manager.hpp  tic_toc.hpp
launch/: front_end.launch  mapping.launch  run.launch  run6axis.launch  run9axis.launch  test_frame.launch
launch/include/: module_loam.launch  module_navsat.launch  module_robot_state_publisher.launch  module_rviz.launch
rviz/: mapping.rviz
slam_data/key_frames/: key_frame_0.pcd  key_frame_1.pcd  key_frame_10.pcd  key_frame_100.pcd  key_frame_101.pcd  key_frame_102.pcd  key_frame_103.pcd  key_frame_104.pcd  key_frame_105.pcd  key_frame_106.pcd  key_frame_107.pcd  key_frame_108.pcd  key_frame_109.pcd  key_frame_11.pcd  key_frame_110.pcd  key_frame_111.pcd  key_frame_112.pcd  key_frame_113.pcd  key_frame_114.pcd  key_frame_115.pcd  key_frame_116.pcd  key_frame_117.pcd  key_frame_118.pcd  key_frame_119.pcd  key_frame_12.pcd  key_frame_120.pcd  key_frame_121.pcd  key_frame_122.pcd  key_frame_123.pcd  key_frame_124.pcd  key_frame_125.pcd  key_frame_126.pcd  key_frame_127.pcd  key_frame_128.pcd  key_frame_129.pcd  key_frame_13.pcd  key_frame_130.pcd  key_frame_131.pcd  key_frame_132.pcd  key_frame_133.pcd  (+251 more)
slam_data/trajectory/: ground_truth.txt  laser_odom.txt
src/: front_end_node.cpp  test_frame_node.cpp
src/apps/: back_end_node.cpp  data_pretreat_node.cpp  front_end_node.cpp  test_frame_node.cpp  viewer_node.cpp
src/data_pretreat/: data_pretreat_flow.cpp
(+48 files in other folders)
